--- a/app/globals.css
+++ b/app/globals.css
@@ -49,13 +49,14 @@ body {
   @apply max-w-2xl w-full mx-auto flex items-center justify-between
 }
 
-.Settings {
+.ModalBackground {
   @apply fixed top-0 left-0 w-full h-full flex items-center justify-center bg-black bg-opacity-50 z-50
 }
 
-.SettingsContainer {
-  @apply bg-gray-100 rounded-md max-w-md w-3/4 text-black border
+.Modal {
+  @apply bg-gray-100 rounded-md max-w-md w-11/12 text-black border
 }
+
 
 .Header {
   @apply text-xl font-bold flex
@@ -95,13 +96,20 @@ body {
 }
 
 .Label {
-  @apply block text-gray-700 font-bold p-5
+  @apply block text-gray-700 font-bold p-2 w-1/3
 }
 
 .SettingsButton {
   @apply bg-gray-300 hover:bg-gray-500 py-2 px-4 rounded-md transition duration-300 font-bold
 }
 
+.Form {
+  @apply w-full pt-4 px-4 text-center
+}
+
+.FormField {
+  @apply mb-4 flex justify-center items-center
+}
 /* Themes */
 /* Study */
 
@@ -117,12 +125,12 @@ body {
   @apply bg-green-500 transition duration-500
 }
 
-.StudyButtonSelected {
-  @apply bg-green-700
-}
-
 .StudyButton {
   @apply bg-green-500
+}
+
+.StudyButtonSelected {
+  @apply bg-green-700
 }
 
 /* Break */
@@ -149,4 +157,13 @@ body {
 
 .BreakButtonSelected {
   @apply bg-blue-700
+}
+
+
+.LoginButton {
+  @apply bg-gray-400 transition duration-300
+}
+
+.LoginButtonSelected {
+  @apply bg-gray-600 transition duration-300
 }
